restructured